<resources>
    <string name="app_name">Sparrow</string>
    <string name="set">Set your profile picture</string>
    <string name="choose">Choose a option for setting your profile</string>
    <string name="mess">Chat</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="skip">Skip</string>
    <string name="myMixedText">My simple Text <b> My Bold Text <i> MyBoldItalicText </i></b></string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="or">OR</string>
    <string name="show">Show password</string>
    <string name="forgot">Forgot password?</string>
    <string name="friendship">Friendship</string>
    <string name="login">Login</string>
    <string name="fb_login">Facebook Login</string>
    <string name="createAccount">Create Account</string>
    <string name="createPost">Create Post</string>
    <string name="creating">Creating a new Account</string>
    <string name="acount_detail">Account Detail</string>
    <string name="namee">Name</string>
    <string name="name">Faisal Razzaq commented on a post that you are tagged in</string>
    <string name="folow_req">Follow Requests</string>
    <string name="approve_ignore">Approve or Ignore</string>
    <string name="post">Yesterday 19:26</string>
    <string name="otp">Verification Code</string>
    <string name="seet">Set profile picture</string>
    <string name="verify_acc">Verify Account</string>
    <string name="vera">We are <b><i>so</i></b> glad to see you.</string>
    <string name="verify">Account Verification Details</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_detail">The code sent your mobile for confirming this contact number belong to you or not</string>
    <string name="creating_title_text">Dont be worry about  giving you Phone number beacuse this phone number is not going to be publicly</string>
    <string name="country">Country</string>
    <string name="dod">Do you want to verify your account></string>
    <string name="well">We are welling such your type of person but unfortunately here is a small issue. To your name, your name was already taken, you can change your name anytime</string>
    <string name="first_name">First Name</string>
    <string name="your_story">Your story</string>
    <string name="surname">Surname</string>
    <string name="id_number">ID Card Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="code">Enter your Code</string>
    <string name="ver">Account verification</string>
    <string name="privacy">Sparrow Privacy And Policy</string>
    <string name="already_account_login">Already have an account? Login </string>
    <string name="signing">By signing in, you are agreeing to our</string>
    <string name="Phone">Surname</string>
    <string name="up">Sign up</string>
    <string name="search">Search</string>
    <string name="join">Join</string>
    <string name="home">Sparrow</string>
    <string name="find">Find Friends</string>
    <string name="invite">INVITE</string>
    <string name="welcome">Welcome to queen match" " </string>
    <string name="user">Username </string>
    <string name="email">Email </string>
    <string name="usercoma">username, </string>
    <string name="hi">Hi" "</string>
    <string name="next">Next" "</string>
    <string name="update">Update" "</string>
    <string name="confirmation">Confirmation code</string>
    <string name="terms">Terms &amp; conditions ""</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="and">and ""</string>
    <string name="bio">Bio/About</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_friend">Add Friend</string>
    <string name="followers">50 Followers</string>
    <string name="friends">200 Friends</string>
    <string name="fans">10 Fans</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="blog">Blog</string>
    <string name="profession">Profession</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="coment">Wow great</string>
    <string name="fullname">Full name</string>
    <string name="discussion">Discussion</string>
    <string name="notify">Notification</string>
    <string name="account">Account</string>
    <string name="social">Social</string>
    <string name="dob">Date of birth</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="room_description">
        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
    </string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_settings">Settings</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_screencapture_key">screencapture_preference</string>
    <string name="pref_screencapture_title">Use screencapture.</string>
    <string name="pref_screencapture_default">false</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Not supported on this device.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_maxvideobitrate_key">maxvideobitrate_preference</string>
    <string name="pref_maxvideobitrate_title">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_dlg">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_default">Default</string>
    <string name="pref_maxvideobitratevalue_key">maxvideobitratevalue_preference</string>
    <string name="pref_maxvideobitratevalue_title">Video encoder maximum bitrate.</string>
    <string name="pref_maxvideobitratevalue_dlg">Enter video encoder maximum bitrate in kbps.</string>
    <string name="pref_maxvideobitratevalue_default">1700</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_flexfec_key">flexfec_preference</string>
    <string name="pref_flexfec_title">Codec-agnostic Flexible FEC.</string>
    <string name="pref_flexfec_dlg">Enable FlexFEC.</string>
    <string name="pref_flexfec_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
</resources>