<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_discussion"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/discussion" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"

        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/account" />

    <!--<item-->
        <!--android:id="@+id/navigation_social"-->
        <!--android:icon="@android:drawable/ic_menu_search"-->
        <!--android:title="Discussion" />-->

    <!--<item-->
        <!--android:id="@+id/navigation_library"-->
        <!--android:icon="@drawable/ic_home_black_24dp"-->
        <!--android:title="@string/title_home" />-->


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/account" />

    <!--<item-->
        <!--android:id="@+id/navigation_setting"-->
        <!--android:icon="@android:drawable/ic_menu_search"-->
        <!--android:title="@string/social" />-->
</menu>
