<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/custom_toolbar"/>

    <RelativeLayout
        android:id="@+id/top_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="55dp"
            android:background="@color/colorchoose"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/welcome_textview"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center|center_vertical"
                android:text="@string/welcome"

                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_textview"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/welcome_textview"
                android:gravity="center|center_vertical"
                android:text="@string/user"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/below_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:padding="20dp">

            <TextView
                android:id="@+id/hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi" />

            <TextView
                android:id="@+id/username_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/hi"
                android:text="@string/usercoma"
                android:textColor="@color/colorchoose" />

            <TextView
                android:id="@+id/explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_textview"
                android:text="@string/dod" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/verification_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/explain"
                android:layout_marginTop="90dp"
                android:hint="@string/ver"
                android:paddingTop="10dp"

                >

                <android.support.design.widget.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/black_border_shape"
                    android:padding="5dp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/below_header_layout"
            android:gravity="center_horizontal"


            >

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_border_transparent_inside"
                android:gravity="center_horizontal"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="25dp" />

            <Button
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/next_button"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_border_transparent_inside"
                android:gravity="center_horizontal"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textSize="25dp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/privacy_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:hint="@string/privacy" />
    </RelativeLayout>

</RelativeLayout>