<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/custom_toolbar"/>

    <RelativeLayout
        android:id="@+id/create_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/confirm_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/confirmation"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/code_detail_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_textview"
            android:layout_marginTop="30dp"
            android:text="@string/confirm_detail" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/code_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/code"
            android:paddingTop="10dp"
            android:textStyle="bold">

            <android.support.design.widget.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/black_border_shape"
                android:padding="5dp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>




        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/code_edittext">

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_navigate_next_black_24dp"
                android:background="@drawable/btn_shape"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/already_login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linear"
                android:gravity="center_horizontal"

                android:text="@string/signing"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/terms_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/terms"
                    android:textColor="@color/colorchoose"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/and_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/and"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/policy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorchoose"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>