<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/custom_toolbar"/>

    <RelativeLayout
        android:id="@+id/account_header_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/full_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:paddingTop="10dp"

            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border_shape"
                android:padding="5dp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/full_name_edittext"
            android:hint="@string/password"
            android:paddingTop="10dp"

            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border_shape"
                android:padding="5dp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/dob_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_edittext"
            android:hint="@string/dob"
            android:paddingTop="10dp"

            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border_shape"
                android:padding="5dp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/dob_edittext"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/gender_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorwhite"
                    android:drawableTop="@drawable/ic_camera_alt_black_24dp"
                    android:text="@string/boy"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorwhite"
                    android:drawableTop="@drawable/ic_camera_alt_black_24dp"
                    android:text="@string/girl"
                    android:textAllCaps="false" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_below="@id/gender_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_shape"
                app:srcCompat="@drawable/ic_navigate_next_black_24dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/already_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linear"
            android:gravity="center_horizontal"
            android:text="@string/signing"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/terms_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/terms"
                android:textColor="@color/colorchoose"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/and_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/and"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/policy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorchoose"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>